Fix scroll overflow on people modals by using flexbox columns

--- a/web/app/themes/girlsgarage/assets/styles/pages/_team.scss
+++ b/web/app/themes/girlsgarage/assets/styles/pages/_team.scss
@@ -49,7 +49,7 @@
 // Team Grid
 
 .people-grid {
-  
+
   .person {
     color: $white;
     -webkit-font-smoothing: antialiased;
@@ -184,17 +184,22 @@
 
     .-inner {
       height: 100%;
+      display: flex;
       padding-bottom: 0;
+      flex-direction: column;
     }
 
     article {
       height: 100%;
+      .credentials {
+        margin-top: 0;
+      }
       .body-content {
         overflow: auto;
         max-height: 100%;
         position: relative;
         margin-left: -#{$global-padding / 2};
-        padding: 0 #{$global-padding / 2} $global-padding;
+        padding: 0 #{$global-padding / 2} 0; //$global-padding;
         width: calc(100% + #{$global-padding});
       }
     }
